dev_ws/log/build_2021-03-17_15-09-47/py_pubsub/stderr.log
  File "/home/mingyu/dev_ws/install/py_pubsub/lib/python3.8/site-packages/py_pubsub/publisher_member_function.py", line 72
    global ser = serial.Serial('/dev/ttyUSB0', 115200, timeout = 1)
               ^
SyntaxError: invalid syntax

